--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <title>Mi 1ª página en html</title>
+    </head>
     <body>
         <h1 style="color:blue">
             Mi 1ª página en html
